# llm-pdf-chat

./: .env.template  .gitignore  README.md  pyproject.toml
client/: app.py  old.py  websocket_consumer.py
server/: config.py  crud.py  lang.py  main.py  models.py  tasks.py  ws.py
