[tool.poetry]
name = "priyqb"
version = "0.1.0"
description = ""
authors = ["aahnik <daw@aahnik.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
streamlit = "^1.31.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
websocket-client = "^1.7.0"
aiohttp = "^3.9.3"
pydantic = "^2.6.3"
beanie = "^1.25.0"
python-decouple = "^3.8"
anthropic = "^0.19.1"
langchain = "^0.1.11"
google-search-results = "^2.4.2"
duckduckgo-search = "^5.0"
chromadb = "^0.4.24"
sentence-transformers = "2.2.2"
pypdf2 = "^3.0.1"
pypdf = "^4.1.0"
instructorembedding = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
